* Wed Nov 07 2018 Liz Nemsick <lnemsick.simp@gmail.com> - 0.0.3-0
- Update static assets
- Update to onyxpoint OEL boxes in acceptance tests
- Update badges in README.md

* Mon Jun 25 2018 Trevor Vaughan <tvaughan@onyxpoint.com> - 0.0.3-0
- Removed the static banners from the module and tied the module to the
  `simp/simp_banners` module
- Add support for OEL and Puppet 5

* Thu Jul 06 2017 Liz Nemsick <lnemsick.simp@gmail.com> - 0.0.2-0
- Update puppet dependency and remove OBE pe dependency in metadata.json

* Thu Dec 15 2016 Nick Miller <nick.miller@onyxpoint.com> - 0.0.1
- First cut